2007-11-29 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RepositoryView.py:
	* src/gen/db/base.py:
	* src/DisplayModels/_RepositoryModel.py:
	Added a change column in repoview, model, database column storage

2007-11-29  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* po//POTFILES.in: renamed PluginStatus.py -> PluginWindows.py

2007-11-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ImportCSV.py: add progress meter

2007-11-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ViewManager.py: use PluginsWindows
	* src/PluginUtils/_PluginStatus.py: moved from
	* src/PluginUtils/_PluginWindows.py: moved to
	* src/PluginUtils/__init__.py: use PluginsWindows
	* src/PluginUtils/_Plugins.py: use PluginsWindows

2007-11-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_MenuOptions.py: added comments
	* src/PluginUtils/_PluginStatus.py: added ToolManagedWindowBatch

2007-11-28 Jim Sack <jgsack@san.rr.com>
        * src/GrampsDb/_ReadGedcom.py : remove trail whitespace (readahead)
        fixes (possible) discarded reference due to bogus handles that get created
        when the reference looks like "@REF_ID@ " (note space after)
	This is a forward-port of the 2.2.x fix for issue #1399

2007-11-28  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/Makefile.am: removed _MenuOptions.py
	* src/PluginUtils/Makefile.am: added _MenuOptions.py

2007-11-28  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_MenuOptions.py: removed/moved to PluginUtils
	* src/ReportBase/__init__.py: removed Menu items
	* src/plugins/Calendar.py: uses MenuReportOptions
	* src/plugins/DescendChart.py: uses MenuReportOptions
	* src/plugins/AncestorChart.py: uses MenuReportOptions
	* src/plugins/GVHourGlass.py: uses MenuReportOptions
	* src/plugins/FanChart.py: uses MenuReportOptions
	* src/PluginUtils/__init__.py: imports Menu items

2007-11-28  Douglas S.Blank  <dblank@cs.brynmawr.edu>